--- a/src/ex-redux/package.json
+++ b/src/ex-redux/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "kelompok-1-binar-platinum-cms",
+  "name": "binar-gold-challenge",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts5": "^5.2.32",
+    "@react-pdf-viewer/core": "^3.3.0",
+    "@react-pdf-viewer/default-layout": "^3.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
-    "bootstrap": "^5.2.3",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "chart.js": "^4.0.1",
     "history": "^5.3.0",
+    "pdfjs-dist": "^2.13.216",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
+    "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^5.0.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.4",
+    "react-dropzone-uploader": "^2.11.0",
+    "react-modal-image": "^2.6.0",
+    "react-player": "^2.11.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
